syntax = "proto2";

package spider.proto;

message ReaderOption {
  optional string channel = 1;
  optional uint32 pending_queue_size = 2
      [default = 1];  // used to define capacity of unprocessed messages
  optional uint32 time_out = 3
  [default = 100]; // ms
}

message ComponentConfig {
  optional string name = 1;
  optional string config_file_path = 2;
  optional string flag_file_path = 3;
  repeated ReaderOption readers = 4;
}
